# VideoCapture

./: CMakeLists.txt  README.md  appveyor.yml
cmake/: ALL_BUILD.vcxproj.user.in  VideoCapture.vcxproj.user.in  install_vs_runtime.cmake
inc/: BmpToJpg.h  CaptureAudio.h  CaptureVideo.h  ImageFormatConversion.h  SampleGrabberCallback.h  common.h  qedit.h  resource.h
res/: VideoCapture.rc
src/: BmpToJpg.cpp  CaptrueAudio.cpp  CaptureVideo.cpp  ImageFormatConversion.cpp  Main.cpp  SampleGrabberCallback.cpp  common.cpp
